# supernote-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: publishing.md
notes/: 20260420-v02-cli-cleanup.md
src/supernote_cli/: __init__.py  api.py  auth.py  cli.py  client.py  models.py  ocr.py  tokenstore.py
tests/: test_auth_unit.py  test_smoke_live.py
