[project]
name = "supernote-cli"
version = "0.1.0"
description = "CLI and Python client for the Supernote viewer.supernote.com cloud API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Boris Smus", email = "boris@smus.com" }]
license = { text = "MIT" }
keywords = ["supernote", "cli", "e-ink", "notes", "ocr", "handwriting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
  "supernotelib>=0.6.2",
  "pillow",
]

[project.urls]
Homepage = "https://github.com/borismus/supernote-cli"
Repository = "https://github.com/borismus/supernote-cli"
Issues = "https://github.com/borismus/supernote-cli/issues"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
supernote = "supernote_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "E501",  # line-too-long; formatter handles long lines it can break
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B011"]  # assert False is fine in tests

[tool.ruff.format]
indent-style = "space"
